tests/execution_spec/snapshots/execution_spec__nesting-level3.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int!
}

type Query {
  post: Post
}

type Todo {
  completed: Boolean
}

scalar Url

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  todos: [Todo]
  username: String!
  website: String
}

schema {
  query: Query
}
