tests/execution_spec/snapshots/execution_spec__omit-many.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user: User
}

scalar Url

type User {
  complements: [String]
  name: String
  zipcode: String
}

schema {
  query: Query
}
