tests/execution_spec/snapshots/execution_spec__ref-other.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  firstUser: User1
}

scalar Url

type User {
  id: Int
  name: String
}

type User1 {
  user1: User
}

schema {
  query: Query
}
