tests/execution_spec/snapshots/execution_spec__resolve-with-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(allowedHeaders: ["authorization"]) {
  query: Query
}

type Post {
  body: String!
  id: ID!
  title: String!
  userId: ID!
}

type Query {
  post1: Post @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/posts/{{.headers.authorization}}")
}
