tests/execution_spec/snapshots/execution_spec__resolve-with-vars.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user: [User]
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
