tests/execution_spec/snapshots/execution_spec__resolve-with-vars.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(vars: [{key: "id", value: "1"}]) @upstream {
  query: Query
}

type Query {
  user: [User] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users", query: [{key: "id", value: "{{.vars.id}}"}])
}

type User {
  id: Int
  name: String
}
